--- a/Client/src/assets/css/varables.scss
+++ b/Client/src/assets/css/varables.scss
@@ -5,23 +5,23 @@ $button-hover-bg-color: #0056b3;
 $font-family: 'Arial', sans-serif;
 
 $colors: (
-  black: #000000,
-  white: #ffffff,
-  red: #ff0000,
-  green: #008000,
-  blue: #0000ff,
-  yellow: #ffff00,
-  orange: #ffa500,
-  purple: #800080,
-  pink: #ffc0cb,
-  gray: #808080,
-  brown: #a52a2a,
-  teal: #008080,
-  indigo: #4b0082,
-  lime: #00ff00,
-  olive: #808000,
-  cyan: #00ffff,
-  maroon: #800000,
-  navy: #000080,
-  gold: #ffd700
+  "black": #000000,
+  "white": #ffffff,
+  "red": #ff0000,
+  "green": #008000,
+  "blue": #0000ff,
+  "yellow": #ffff00,
+  "orange": #ffa500,
+  "purple": #800080,
+  "pink": #ffc0cb,
+  "gray": #808080,
+  "brown": #a52a2a,
+  "teal": #008080,
+  "indigo": #4b0082,
+  "lime": #00ff00,
+  "olive": #808000,
+  "cyan": #00ffff,
+  "maroon": #800000,
+  "navy": #000080,
+  "gold": #ffd700
 );
