--- a/Client/src/pages/user-side/auth/login/LoginPage.scss
+++ b/Client/src/pages/user-side/auth/login/LoginPage.scss
@@ -5,7 +5,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #f4f4f4;
+    background-color: white;
   }
   
   .login-title {
