--- a/Client/src/pages/user-side/carts/CartPage.scss
+++ b/Client/src/pages/user-side/carts/CartPage.scss
@@ -11,7 +11,7 @@
       overflow: hidden;
       display: flex;
       flex-direction: column;
-    //   gap: 1rem;
+      gap: 1rem;
   
       .cart-item {
         display: flex;
@@ -89,6 +89,7 @@
       
         .cart-container {
             width: 100%;
+            display: flex;
 
             .item-details{
                 flex-direction: column;
