--- a/Client/src/pages/user-side/products/userProd.scss
+++ b/Client/src/pages/user-side/products/userProd.scss
@@ -35,7 +35,7 @@
   
     .product-details {
       width: 40%;
-      padding: 1rem;
+      // padding: 1rem;
       display: flex;
       flex-direction: column;
       gap: 1rem;
