--- a/Client/src/app.scss
+++ b/Client/src/app.scss
@@ -85,6 +85,14 @@
   background-color: #fff;
 }
 
+.page-outer{
+  background-color: #fff;
+  min-height: 80vh;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
 // Colors
 @each $name, $color in vars.$colors {
   .bg-#{$name} {
