--- a/Client/src/pages/user-side/auth/login/LoginPage.scss
+++ b/Client/src/pages/user-side/auth/login/LoginPage.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    width: 350px;
+    height: 300px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -14,9 +17,9 @@
     color: #333;
   }
   
-  .MuiTextField-root {
-    margin-bottom: 15px;
-  }
+  // .MuiTextField-root {
+  //   margin-bottom: 15px;
+  // }
   
   button {
     margin-top: 20px;
